--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --yellow: #FFCA40;
-  --red: #C8161D;
+  --yellow: #ffca40;
+  --red: #c8161d;
   --grey: #808080;
   --white: #f8f8f7;
 }
@@ -23,7 +23,6 @@ body,
   width: 100%;
   height: 100vh;
 }
-
 
 .swiper-pagination-bullet-active {
   width: 20px !important;
