--- a/src/pages/Login/index.module.css
+++ b/src/pages/Login/index.module.css
@@ -22,7 +22,7 @@
     color: grey;
   }
 
-  input {
+  /* input {
     width: 100%;
     height: 50px;
     background-color: #f5f5f5;
@@ -30,6 +30,63 @@
     outline: 0;
     border-radius: 10px;
     padding-left: 1rem;
+  } */
+
+  .inputContainer {
+    width: 100%;
+    height: 50px;
+    position: relative;
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  .styledInputBar {
+    height: 100%;
+    width: 100%;
+    padding: 1em;
+    font-size: 1em;
+    border: 0;
+    border-radius: 10px;
+    background-color: transparent;
+    color: black;
+    outline: none;
+    transition: all 0.3s ease;
+    box-sizing: border-box;
+  }
+
+  .styledInputBar::placeholder {
+    color: grey;
+    transition: all 0.3s ease;
+  }
+
+  /* .styledInputBar:focus::placeholder {
+    color: transparent;
+  } */
+
+  .inputLabel {
+    position: absolute;
+    left: 1em;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: grey;
+    pointer-events: none;
+    transition: all 0.3s ease;
+  }
+
+  .styledInputBar:focus + .inputLabel,
+  .styledInputBar:not(:placeholder-shown) + .inputLabel {
+    top: 0.1em;
+    left: 1em;
+    font-size: 0.8em;
+    color: black;
+    background-color: #f5f5f5;
+    padding: 0 0.5em;
+    border-radius: 10px;
+  }
+
+  .styledInputBar:not(:focus):not(:placeholder-shown) + .inputLabel {
+    color: grey;
   }
 
   .eyeIcon {
@@ -52,16 +109,24 @@
     border: 1px solid var(--grey);
     border-radius: 10px;
     background: transparent;
-    font-weight: 500;
     transition: 300ms linear;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+    @media screen and (max-width: 767px) {
+      font-size: 10px;
+    }
 
     &:hover {
       transform: scale(1.1);
       background-color: #ebebeb;
     }
 
-    .fbIcon {
-      color: #0a53be;
+    .icon {
+      font-size: 20px;
     }
   }
 }
